[project]
name = "lifter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.8",
    "jinja2>=3.1.6",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "qrcode[pil]>=8.2",
    "ruff>=0.15.1",
    "uvicorn>=0.40.0",
]


[tool.ruff]
line-length = 100
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true